--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1
-Django==4.0.5
+certifi==2022.9.24
+charset-normalizer==2.1.1
+decorator==5.1.1
+Django==4.1.2
 gunicorn==20.1.0
+idna==3.4
+lxml==4.9.1
 mysqlclient==2.1.1
-sqlparse==0.4.2
-unicorn==1.0.3
+requests==2.28.1
+sqlparse==0.4.3
+tzdata==2022.5
+unicorn==2.0.0
+urllib3==1.26.12
+validators==0.20.0
